  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.5.1 2023/09/xx
  - release - fix viewer systemd file
  - all - handle cookies encoded, bad proxy

4.5.0 2023/09/13
  - release - node 16.20.2
  - release - added missingok to default logrotate for arkime
  - capture - dns answers were double parsed
  - capture - custom-fields honors viewerOnly:true
  - capture - added dns.https fields
  - capture - added cert:certificate-authority tag (thanks mcgillowen )
  - cont3xt - remove raw view button for link groups on the cont3xt search page
  - cont3xt - Overview shortcut
  - cont3xt - fixed overviews not updating on switch
  - db.pl - don't allow '.' to be used for sync/add path
  - viewer - fixed ipv6 session display issues when :: in ip
  - viewer - http display rewritten to not depending on nodejs internals
  - viewer - gpe display improvements

4.4.0 2023/08/02
  - release - cyberchef 10.5.2
  - release - update arkime_update_geo.sh to use different manuf location
  - all - improved json verification
  - all - better logging when requiredAuthHeader fails
  - all - better role creation/usage validation
  - all - don't allow circular role dependencies
  - all - now need to be an userAdmin and *Admin to update *Admin change
          settings for another user
  - all - more auth debugging
  - all - can now change the password of another *Admin user if you have
          userAdmin and all the same *Admin
  - all - hide webEnable, headerAuthEnable checkboxes for roles
  - all - oidc now uses sameSite: Lax instead of sameSite: Strict for cookies
  - capture - handle tcp port reuse better
  - capture - fix kafka memory leak when produce fails
  - cont3xt - New overview cards